--- a/index.html
+++ b/index.html
@@ -9,7 +9,145 @@
 </head>
 
 <body>
-    <h1>project</h1>
+    <nav>
+        <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Team</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="logo">Logo</div>
+
+    <div>
+        <header>
+            <h1>The dawn of a new era in health is here</h1>
+            <h3>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit blandit facilisis</h3>
+        </header>
+
+        <button type="button">join now</button>
+
+        <table>
+            <td>
+                <img src="header 1.jpg" alt="">
+                <img src="header 2.jpg" alt="">
+            </td>
+        </table>
+    </div>
+
+
+    <div>
+        <table>
+            <thead>
+                <th>Wellbeing is welldoing</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><img src="Group 1.png" alt=""></td>
+                    <td><img src="Group 1.png" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit.</td>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit.</td>
+                </tr>
+            </tbody>
+        </table> 
+        
+        <img src="Illustration.png" alt="">
+    </div>
+
+    <div>
+        <img src="Group 15.png" alt="">
+        <table>
+            <thead>
+                <caption>
+                    Fresh organic produce
+                </caption>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit blandit facilisis enim risus. Ut tristique eget integer odio nec vulputate consequat. Elit mattis ac in amet sit viverra.
+                    </td>
+                </tr>
+                <br>
+                <tr>
+                    <td><img src="Icon.png" alt=""></td>
+                    <td><img src="Icon.png" alt=""></td>
+                    <td><img src="Icon.png" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea</td>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea</td>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea</td>
+                </tr>
+            </tbody>
+
+        </table>
+
+    </div>
+
+
+    <div>
+        <img src="Illustration..png" alt="">
+
+        <table>
+            <thead>
+                <caption>You are what you eat</caption>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td><img src="Group 2.png" alt=""></td>
+                    <td><img src="Group 2.png" alt=""></td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit.</td>
+                    <td>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit.</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+    <div>
+       <img src="Icon11.png" alt=""> 
+       <img src="frame.fone.png" alt="">
+        <h2>Wellbeing starts with welldoing</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit blandit facilisis enim risus. Ut tristique eget integer odio nec.</h3>
+
+        <button type="button">Join now</button>
+    </div>
+
+    <div>
+        <table>
+            <tr>
+                <td><img src="Icon.frame.png" alt=""></td>
+                <td><img src="Icon.frame.png" alt=""></td>
+                <td><img src="Icon.frame.png" alt=""></td>
+            </tr>
+            <tr>
+                <td>Plant Protective</td>
+                <td>Plant Protective</td>
+                <td>Plant Protective</td>
+            </tr>
+        </table>
+    </div>
+
+   
+    <div class="logo">Logo</div>
+
+   
+    <nav>
+        <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Team</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+
 </body>
 
 </html>
